--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -4,7 +4,8 @@
     <!-- BEGIN LOGO -->
     <div class="page-logo">
         <a href="/">
-            <img src="/img/explorer-logo.png" alt="logo" class="logo-default" />
+            <!-- <img src="/img/explorer-logo.png" alt="logo" class="logo-default" /> -->
+            <p class="logo_text">TAICHAIN</p>
         </a>
     </div>
     <!-- END LOGO -->
