--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -3,23 +3,23 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                 <h2>About</h2>
-                <p> <a href="https://github.com/etherzero-org/explorer" target="_blank">Fork me on github.</a> </p>
+                <p> <a href="https://github.com/TaiChain-org/explorer" target="_blank">Fork me on github.</a> </p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                 <h2>Follow Us On</h2><br>
-                https://www.etherzero.org/
+                https://www.TaiChain.org/
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 footer-block">
                 <h2>Help, it's Broken!</h2>
                 <address class="margin-bottom-40"> 
-                    <br>Open an Issue: <a href="https://github.com/etherzero-org/explorer/issues">github</a>
+                    <br>Open an Issue: <a href="https://github.com/Tai-Labs/Tai-Labs-explorer/issues">github</a>
                 </address>
             </div>
         </div>
     </div>
 </div>
 <div class="footer_class">
-    <div class="container"> 2018 &copy; EtherZero. </div>
+    <div class="container"> 2018 &copy; TaiChain. </div>
 </div>
 <div class="scroll-to-top">
     <i class="icon-arrow-up"></i>
