--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div class="footer_class">
-    <div class="container"> 2019-2020 &copy; TaiChain. </div>
+    <div class="container"> 2019-2020 &copy; TitProtocol.com. </div>
 </div>
 <div class="scroll-to-top">
     <i class="icon-arrow-up"></i>
